--- a/index.html
+++ b/index.html
@@ -5,21 +5,29 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Prosjekter og Oppgaver</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" type="text/css" href="style.css" />
 </head>
+
 <body>
     <div class="wrapper">
         <div class="container">
-            <div><img class="logoGET" src="getlogo.png"/></div>
+            <div><img class="logoGET" src="getlogo.png" /></div>
             <div class="divider"></div>
-            <div class="center"><h1>Johnny Dung Truong</h1></div>
+            <div class="center">
+                <h1>Johnny Dung Truong</h1>
+            </div>
             <div class="divider"></div>
-            <div class="center"><h2>Ukesoppgave</h2></div>
+            <div class="center">
+                <h2>Ukesoppgave</h2>
+            </div>
             <a href="weekly1\index.html">Uke 1-2</a>
-            <div class="center"><h2>Modul - 1</h2></div>
+            <div class="center">
+                <h2>Modul - 1</h2>
+            </div>
             <a href="example1\index.html">Eksempel - 1</a>
             <a href="tasks\function_og_parametre\index.html">Funksjon & Parametre</a>
             <a href="tasks\stopwatch\index.html">Stoppeklokke</a>
+            <a href="tasks\trafficlight\index.html">Trafikklys</a>
         </div>
     </div>
 </body>
