--- a/tasks/trafficlight/index.html
+++ b/tasks/trafficlight/index.html
@@ -12,7 +12,7 @@
         <div class="container">
             <div class="center"> <h1>Trafikk Lys</h1> </div>
             <div class="divider"></div>
-            <div class="center col">
+            <div class="center col" style="margin-top: 50px">
                 <div id="red" class="light red"></div>
                 <div id="yellow" class="light yellow"></div>
                 <div id="green" class="light green"></div>
