Added traffic light task

--- a/tasks/trafficlight/index.html
+++ b/tasks/trafficlight/index.html
@@ -7,7 +7,7 @@
     <script src="script.js"></script>
     <link rel="stylesheet" type="text/css" href="style.css" />
 </head>
-<body>
+<body onload="turnRed()">
     <div class="wrapper">
         <div class="container">
             <div class="center"> <h1>Trafikk Lys</h1> </div>
@@ -17,6 +17,10 @@
                 <div id="yellow" class="light yellow"></div>
                 <div id="green" class="light green"></div>
             </div>
+            <div class="divider"></div>
+            <button onClick="turnRed()">Rødt Lys</button>
+            <button onClick="turnYellowRed()">Gult > Rødt Lys</button>
+            <button onClick="turnGreen()">Grønt Lys</button>
         </div>
     </div>
 </body>
