Oppdatert index hub

--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
             <a href="tasks\function_og_parametre\index.html">Funksjon & Parametre</a>
             <a href="tasks\stopwatch\index.html">Stoppeklokke</a>
             <a href="tasks\trafficlight\index.html">Trafikklys</a>
+            <a href="tasks\this_tastatur\index.html">Tastatur</a>
+            <a href="tasks\lightbulb\index.html">Lyspære</a>
+            <a href="tasks\return\index.html">Return funksjon</a>
         </div>
     </div>
 </body>
