--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
             <a href="tasks\this_tastatur\index.html">Tastatur</a>
             <a href="tasks\lightbulb\index.html">Lyspære</a>
             <a href="tasks\return\index.html">Return funksjon</a>
+            <a href="tasks\crocodile\index.html">Krokodille spill</a>
         </div>
     </div>
 </body>
