--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
             <a href="tasks\lightbulb\index.html">Lyspære</a>
             <a href="tasks\return\index.html">Return funksjon</a>
             <a href="tasks\crocodile\index.html">Krokodille spill</a>
+            <a href="tasks\adjectivehistory\index.html">Adjektiv spill</a>
         </div>
     </div>
 </body>
