Added 2 loop task and 8ball

--- a/index.html
+++ b/index.html
@@ -33,6 +33,9 @@
             <a href="tasks\return\index.html">Return funksjon</a>
             <a href="tasks\crocodile\index.html">Krokodille spill</a>
             <a href="tasks\adjectivehistory\index.html">Adjektiv spill</a>
+            <a href="tasks\8ball\index.html">Magic 8-Ball</a>
+            <a href="tasks\loop\index.html">Loop - For nummere</a>
+            <a href="tasks\loop_text\index.html">Loop - For Vokaler tekst</a>
         </div>
     </div>
 </body>
