--- a/tasks/loop_text/index.html
+++ b/tasks/loop_text/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Magic - 8 Ball</title>
+    <title>Loop - String Vokaler</title>
     <script src="script.js"></script>
     <link rel="stylesheet" type="text/css" href="style.css" />
 </head>
