--- a/index.html
+++ b/index.html
@@ -24,18 +24,23 @@
             <div class="center">
                 <h2>Modul - 1 </h2>
             </div>
-            <a href="example1\index.html">Eksempel - 1</a>
-            <a href="tasks\function_og_parametre\index.html">Funksjon & Parametre</a>
-            <a href="tasks\stopwatch\index.html">Stoppeklokke</a>
-            <a href="tasks\trafficlight\index.html">Trafikklys</a>
-            <a href="tasks\this_tastatur\index.html">Tastatur</a>
-            <a href="tasks\lightbulb\index.html">Lyspære</a>
-            <a href="tasks\return\index.html">Return funksjon</a>
-            <a href="tasks\crocodile\index.html">Krokodille spill</a>
-            <a href="tasks\adjectivehistory\index.html">Adjektiv spill</a>
-            <a href="tasks\8ball\index.html">Magic 8-Ball</a>
-            <a href="tasks\loop\index.html">Loop - For nummere</a>
-            <a href="tasks\loop_text\index.html">Loop - For Vokaler tekst</a>
+            <div class="taskGrid">
+                <a href="example1\index.html">Eksempel - 1</a>
+                <a href="tasks\function_og_parametre\index.html">Funksjon & Parametre</a>
+                <a href="tasks\stopwatch\index.html">Stoppeklokke</a>
+                <a href="tasks\trafficlight\index.html">Trafikklys</a>
+                <a href="tasks\this_tastatur\index.html">Tastatur</a>
+                <a href="tasks\lightbulb\index.html">Lyspære</a>
+                <a href="tasks\return\index.html">Return funksjon</a>
+                <a href="tasks\crocodile\index.html">Krokodille spill</a>
+                <a href="tasks\adjectivehistory\index.html">Adjektiv spill</a>
+                <a href="tasks\8ball\index.html">Magic 8-Ball</a>
+                <a href="tasks\return\index.html">Return function</a>
+                <a href="tasks\loop\index.html">Loop - For nummere</a>
+                <a href="tasks\loop_text\index.html">Loop - For Vokaler tekst</a>
+                <a href="tasks\loop_while\index.html">Loop - While</a>
+                <a href="tasks\objects\index.html">Objekter</a>
+            </div>
         </div>
     </div>
 </body>
