--- a/index.html
+++ b/index.html
@@ -40,6 +40,9 @@
                 <a href="tasks\loop_text\index.html">Loop - For Vokaler tekst</a>
                 <a href="tasks\loop_while\index.html">Loop - While</a>
                 <a href="tasks\objects\index.html">Objekter</a>
+                <a href="tasks\soundboard\index.html">Soundboard</a>
+
+                
             </div>
             <div class="center">
                 <h2>Extra - Challenge</h2>
