--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
                 <a href="tasks\loop_while\index.html">Loop - While</a>
                 <a href="tasks\objects\index.html">Objekter</a>
                 <a href="tasks\soundboard\index.html">Soundboard</a>
+                <a href="tasks\supermario\index.html">Supermario</a>
 
                 
             </div>
