--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
                 <a href="tasks\objects\index.html">Objekter</a>
                 <a href="tasks\soundboard\index.html">Soundboard</a>
                 <a href="tasks\supermario\index.html">Supermario</a>
-
-                
+                <a href="tasks\chatbot\index.html">Chatbot</a>
+                <a href="tasks\pokemon\index.html">Pokemon</a>
             </div>
             <div class="center">
                 <h2>Extra - Challenge</h2>
