--- a/tasks/chatbot/index.html
+++ b/tasks/chatbot/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Template</title>
+    <title>Chatbot</title>
     <link rel="stylesheet" type="text/css" href="style.css" />
 </head>
 <body>
     <div class="wrapper">
         <div class="container">
-            <div class="center"> <h1>Template</h1> </div>
+            <div class="center"> <h1>Chatbot</h1> </div>
             <div class="divider"></div>
             <div id="myHTML"></div>
         </div>
