--- a/index.html
+++ b/index.html
@@ -43,7 +43,8 @@
                 <a href="tasks\soundboard\index.html">Soundboard</a>
                 <a href="tasks\supermario\index.html">Supermario</a>
                 <a href="tasks\chatbot\index.html">Chatbot</a>
-                <a href="tasks\pokemon\index.html">Pokemon</a>
+                <a href="tasks\pokemon\index.html">Pokemon - Stein Saks Papir</a>
+                <a href="tasks\pokemon_game\index.html">Pokemon Game WIP</a>
             </div>
             <div class="center">
                 <h2>Extra - Challenge</h2>
@@ -54,5 +55,4 @@
         </div>
     </div>
 </body>
-
 </html>
