--- a/tasks/pokemon_game/index.html
+++ b/tasks/pokemon_game/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="wrapper">
         <div class="container">
-            <div class="center"> <h1>Pokemon - Game</h1></div>
+            <div class="center"> <h1>Pokemon - Game V0.34 (WIP)</h1></div>
             <div class="divider"></div>
             <div id="myHTML"></div>
         </div>
