--- a/tasks/pokemon_game/index.html
+++ b/tasks/pokemon_game/index.html
@@ -15,5 +15,7 @@
         </div>
     </div>
 </body>
+<script src="data_pkmn.js"></script>
 <script src="script.js"></script>
+<script src="typeDMG.js"></script>
 </html>
