--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Prosjekter og Oppgaver</title>
     <link rel="stylesheet" type="text/css" href="style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@700&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -43,8 +46,10 @@
                 <a href="tasks\soundboard\index.html">Soundboard</a>
                 <a href="tasks\supermario\index.html">Supermario</a>
                 <a href="tasks\chatbot\index.html">Chatbot</a>
-                <a href="tasks\pokemon\index.html">Pokemon - Stein Saks Papir</a>
+                <a href="tasks\pokemon\index.html">Pokemon - SSP</a>
                 <a href="tasks\pokemon_game\index.html">Pokemon Game WIP</a>
+                <a href="tasks\shopcart\index.html">Handleliste</a>
+                <a href="tasks\morsecode\index.html">Morsecode</a>
             </div>
             <div class="center">
                 <h2>Extra - Challenge</h2>
