--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
                 <a href="tasks\pokemon_game\index.html">Pokemon Game WIP</a>
                 <a href="tasks\shopcart\index.html">Handleliste</a>
                 <a href="tasks\morsecode\index.html">Morsecode</a>
+                <a href="tasks\simonsays\index.html">Simon Says</a>
             </div>
             <div class="center">
                 <h2>Extra - Challenge</h2>
