--- a/tasks/pokemon_game/canvas.html
+++ b/tasks/pokemon_game/canvas.html
@@ -9,5 +9,6 @@
     <canvas></canvas>
 </body>
 <script src="data/collisions.js"></script>
+<script src="data/encounter.js"></script>
 <script src="canvas.js"></script>
 </html>
