--- a/index.html
+++ b/index.html
@@ -51,6 +51,10 @@
                 <a href="tasks\shopcart\index.html">Handleliste</a>
                 <a href="tasks\morsecode\index.html">Morsecode</a>
                 <a href="tasks\simonsays\index.html">Simon Says</a>
+                <a href="tasks\debugthis\index.html">Debug This</a>
+
+
+                
             </div>
             <div class="center">
                 <h2>Extra - Challenge</h2>
