--- a/tasks/pokemon_game/index.html
+++ b/tasks/pokemon_game/index.html
@@ -10,6 +10,7 @@
     <div class="wrapper">
         <div class="container">
             <div class="center"> <h1>Pokemon - Game V0.6 (WIP)</h1></div>
+            <div class="center"> <h3>Beveg med (WASD)</h3></div>
             <div class="divider"></div>
             <div class="game_boundary">
                 <canvas class="pkmn_canvas"></canvas>
