--- a/index.html
+++ b/index.html
@@ -52,6 +52,8 @@
                 <a href="tasks\morsecode\index.html">Morsecode</a>
                 <a href="tasks\simonsays\index.html">Simon Says</a>
                 <a href="tasks\debugthis\index.html">Debug This</a>
+                <a href="tasks\norwayflag\index.html">Norske Flagg</a>
+                <a href="tasks\chessboard\index.html">Sjakkbrett JS</a>
 
 
                 
