--- a/tasks/calculator/index.html
+++ b/tasks/calculator/index.html
@@ -22,3 +22,12 @@
 </body>
 <script src="script.js"></script>
 </html>
+
+<!-- <div class="gridbuttons">
+    <div onClick="mathOperator('%')">%</div><div onClick="resetInput()">CE</div><div onClick="fullReset()">C</div><div>⌫</div>
+    <div onClick="mathOperator('convertDec')">¹/ₓ</div><div onClick="mathOperator('exp')">x²</div><div onClick="mathOperator('sqrRoot')">√</div><div onClick="mathOperator('/')">÷</div>
+    <div class="num" onClick="digit(this.innerHTML)">7</div><div class="num" onClick="digit(this.innerHTML)">8</div><div class="num" onClick="digit(this.innerHTML)">9</div><div onClick="mathOperator('*')">⨯</div>
+    <div class="num" onClick="digit(this.innerHTML)">4</div><div class="num" onClick="digit(this.innerHTML)">5</div><div class="num" onClick="digit(this.innerHTML)">6</div><div onClick="mathOperator('-')">−</div>
+    <div class="num" onClick="digit(this.innerHTML)">1</div><div class="num" onClick="digit(this.innerHTML)">2</div><div class="num" onClick="digit(this.innerHTML)">3</div><div onClick="mathOperator('+')">+</div>
+    <div class="num" onClick="reverse()">±</div><div class="num" onClick="digit(this.innerHTML)">0</div><div class="num" onClick="digit(this.innerHTML)">.</div><div>=</div>
+</div> -->
