--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
                 <a href="tasks\debugthis\index.html">Debug This</a>
                 <a href="tasks\norwayflag\index.html">Norske Flagg</a>
                 <a href="tasks\chessboard\index.html">Sjakkbrett JS</a>
+                <a href="tasks\calculator\index.html">Kalkulator</a>
 
 
                 
