--- a/codealong/session2/index.html
+++ b/codealong/session2/index.html
@@ -3,21 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Morsecode</title>
+    <title>Template</title>
     <link rel="stylesheet" type="text/css" href="style.css" />
 </head>
 <body>
-    <input class="wrapper">
-        <input class="container">
-            <div class="center"> <h1>Morsecode</h1> </div>
+    <div class="wrapper">
+        <div class="container">
+            <div class="center"> <h1>Template</h1> </div>
             <div class="divider"></div>
             <div id="myHTML"></div>
-
-
-
-
         </div>
     </div>
 </body>
-<script src="script.js"></script>
+    <script src="script.js"></script>
 </html>
